web: fix header colour for notification drawer in dark mode

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -279,6 +279,7 @@ body {
     }
     .pf-c-notification-drawer__header {
         background-color: var(--ak-dark-background-lighter);
+        color: var(--ak-dark-foreground);
     }
     /* data list */
     .pf-c-data-list__item {
